# cquiz

./: .gitignore  CMakeLists.txt  README.md  questions.md  questions.txt  results.txt
src/client/: main.c
src/client/utils/: connector.c  connector.h
src/common/: list.c  list.h  questions.c  questions.h
src/server/: main.c  question_parser.c  question_parser.h
src/server/connection_handler/: connection_handler.c  connection_handler.h
src/server/parsing_utils/: parsing_utils.c  parsing_utils.h
src/server/question_parser/: question_parser.c  question_parser.h
src/server/results/: results.c  results.h
src/server/server_utils/: server_utils.c
src/server/utils/: server_utils.c  server_utils.h  utils.c  utils.h
